--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,7 +3,7 @@
 
 
 body {
-    background-image: url(/images/sunset.JPEG);
+    background-image: url(images/sunset.JPEG);
 }
 #line{
     color: #825f96;
